Projet GL/test/src/test/deca/syntax/invalid/bad_operation_sum.deca
// Description:
//    Programme testant ++ 
//
// Resultats:
//    mismatched input '+' 
//
// Historique:
//    cree le 10/01/2023


{
    i++;
}
